project structure organized

--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
   "name": "adopt-me",
   "version": "1.0.0",
   "description": "A pet adoption app",
-  "main": "index.js",
+  "main": "App.jsx",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
