--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "bcrypt": "^5.1.0",
     "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.6",
