--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
+    "boxicons": "^2.1.4",
     "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
