firebase storage and more pages

--- a/server/.env
+++ b/server/.env
@@ -10,3 +10,11 @@ REFRESH_TOKEN_SECRET = 23862794fde67b61a5d2819be3a46f130239938d06ab8201bf3c6d001
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:@localhost:3306/internhub"
+FIREBASE_API_KEY = "AIzaSyCgSNqkVhu-iYg4D1ykWpf0CPYQuifz5gU"
+FIREBASE_AUTH_DOMAIN = "internhub-4e87e.firebaseapp.com"
+FIREBASE_PROJ_ID = "internhub-4e87e"
+FIREBASE_STORAGE_BUCKET =  "internhub-4e87e.appspot.com"
+FIREBASE_MESSAGING_SENDER_ID = "806206599465"
+FIREBASE_APP_ID = "1:806206599465:web:f2d617ad83a261e0750738"
+FIREBASE_MEASUREMENT_ID = "G-VWYYMGYX5P"
+
