--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.22.0",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.4",
     "nodemailer": "^6.9.1",
