--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
+    "react-signature-canvas": "^1.0.6",
     "react-tabs": "^6.0.1"
   }
 }
