--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "canvas": "^2.11.2",
+    "convert-svg-to-png": "^0.6.4",
     "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -14,6 +17,10 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.2.4",
     "nodemailer": "^6.9.1",
+    "pipeline": "^0.1.3",
+    "signature_pad": "^4.1.5",
+    "stream": "^0.0.2",
+    "svg-capture": "^1.0.1",
     "uuid": "^9.0.0"
   },
   "name": "server",
