--- a/client/package.json
+++ b/client/package.json
@@ -41,9 +41,14 @@
     "react-auth-kit": "^2.12.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
     "react-signature-canvas": "^1.0.6",
-    "react-tabs": "^6.0.1"
+    "react-tabs": "^6.0.1",
+    "react-toastify": "^9.1.3",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
+    "websocket": "^1.0.34"
   }
 }
