--- a/server/package.json
+++ b/server/package.json
@@ -10,18 +10,23 @@
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "firebase": "^9.22.0",
+    "handlebars": "^4.7.7",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
+    "jspdf": "^2.5.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.4",
-    "nodemailer": "^6.9.1",
-    "pipeline": "^0.1.3",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.13.0",
+    "puppeteer": "^20.2.1",
     "signature_pad": "^4.1.5",
-    "stream": "^0.0.2",
     "svg-capture": "^1.0.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0"
   },
   "name": "server",
   "version": "1.0.0",
