--- a/client/package.json
+++ b/client/package.json
@@ -37,10 +37,12 @@
     "boxicons": "^2.1.4",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-joi-validation": "^1.7.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
